Update Spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,7 +324,11 @@
 	.\-1u {
 		margin-left: 8.33333%;
 	}
-
+	@media (max-width: 1680px) {
+		.righthead {
+		margin: 20px 10px 0 0;
+		}
+	}
 	@media screen and (max-width: 1680px) {
 
 		.row > * {
